# fylle-format

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
cli/: package.json
cli/src/: index.ts
examples/compliance-checker/: README.md  agent.md  guardrails.yaml  manifest.yaml
examples/compliance-checker/skills/: regulatory-review.yaml
examples/content-curator/: README.md  agent.md  manifest.yaml
examples/content-curator/skills/: research.yaml
examples/newsletter-pack/: README.md  brief_schema.yaml  manifest.yaml
examples/newsletter-pack/agents/writer/: agent.md  manifest.yaml
examples/newsletter-pack/agents/writer/skills/: copywriting.yaml
fylle-protocol-site/: CLAUDE.md  README.md  index.html  package-lock.json  package.json
fylle-protocol-site/src/: App.jsx  global.css
fylle-protocol-site/src/components/: BuilderSteps.jsx
fylle-protocol-site/src/components/hub/: AgentCard.jsx  AgentGrid.jsx  CategoryFilter.jsx  InspectModal.jsx
fylle-protocol-site/src/data/: hubAgents.js
fylle-protocol-site/src/pages/: Build.jsx  Builder.jsx  Home.jsx  Hub.jsx  Landing.jsx
sdk/python/: pyproject.toml
sdk/python/fylle_format/: __init__.py  builder.py  parser.py  schema.py  validator.py
sdk/python/tests/: test_roundtrip.py
spec/: SPECIFICATION.md
