[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fylle-format"
version = "0.1.0"
description = "The portable format for AI agents. Parse, validate, and build .fylle packages."
readme = "../../README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Fylle", email = "hello@fylle.ai" },
]
keywords = ["ai", "agents", "format", "portable", "fylle", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/DavideScanta/fylle-format"
Documentation = "https://github.com/DavideScanta/fylle-format/tree/main/spec"
Repository = "https://github.com/DavideScanta/fylle-format"
Issues = "https://github.com/DavideScanta/fylle-format/issues"

[tool.hatch.build.targets.wheel]
packages = ["fylle_format"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
